--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,9 +40,10 @@ body {
 }
 
 .logo img {
-  height: 48px;                  /* ⬅️ увеличиваем ТОЛЬКО картинку */
+  height: 42px;
   width: auto;
 }
+
 
 
 /* ================= BUTTONS ================= */
